--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,29 +1,25 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org", xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <title>Please sign in</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
     <link href="https://getbootstrap.com/docs/4.0/examples/signin/signin.css" rel="stylesheet" crossorigin="anonymous"/>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <title>Please sign in</title>    
 </head>
 <body>
 
 <div>
     <nav th:fragment="header">
-        <div>
-            <a th:href="@{/}">Home</a>
-            <a th:href="@{/products}"> | Product</a>
-            <a th:href="@{/drawings}"> | Drawings</a>
+        <div class="text-center">
+            <a th:href="@{/}" th:text="#{menu.message.home}"></a>
+            <a th:href="@{/products}" th:text="' | ' + #{menu.message.product}"></a>
         </div>
     </nav>
 
 </div>
 <div class="container">
     <form class="form-signin" method="post" action="/login">
-        <h2 class="form-signin-heading">[[#{lang.change.login}]]</h2>
+        <h2 class="form-signin-heading" th:text="#{lang.change.login}"></h2>
         <p>
             <label for="username" class="sr-only">Username</label>
             <input type="text" id="username" name="username" class="form-control" th:placeholder="#{lang.change.login.username}" required autofocus>
@@ -32,7 +28,7 @@
             <label for="password" class="sr-only">Password</label>
             <input type="password" id="password" name="password" class="form-control" th:placeholder="#{lang.change.login.password}" required>
         </p>
-        <button class="btn btn-lg btn-primary btn-block" type="submit">[[#{lang.change.login.signin}]]</button>
+        <button class="btn btn-lg btn-primary btn-block" type="submit" th:text="#{button.signin}"></button>
     </form>
     <div th:replace="include/footer :: footer"></div>
 </div>
