--- a/src/main/resources/templates/department/addDepartment.html
+++ b/src/main/resources/templates/department/addDepartment.html
@@ -1,25 +1,20 @@
 <!DOCTYPE HTML>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="include/head :: head">
-    <title>Add new department</title>
+    <title th:text="#{department.message.add}"></title>
 </head>
 <body>
 <div th:replace="include/header :: header"></div>
 <form class="container" action="/departments" method="post">
-    <h3>Add new department</h3>
-    <table>
-        <tr>
-            <td><label>Name Department</label></td>
-            <td>
+    <br>
+    <h3><span th:text="#{department.message.add}"></span></h3>
+
+            <br><label th:text="#{department.message.name}"></label>
+    <br>
                 <input type="text" name="departmentName" th:value="${department.departmentName}" required/>
-            </td>
-        </tr>
-    </table>
-    <tr>
-        <td colspan="2">
-            <input type="submit" value="Submit"/>
-        </td>
-    </tr>
+    <br>
+    <br>
+            <button type="submit" th:text="#{button.submit}"></button>
 </form>
 <div th:replace="include/footer :: footer"></div>
 </body>
