--- a/src/main/resources/templates/department/departments.html
+++ b/src/main/resources/templates/department/departments.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head th:replace="include/head :: head">
-    <title>Departments</title>
+    <title th:text="#{department.message.departments}"></title>
 </head>
 
 <body>
@@ -15,7 +15,7 @@
         <thead>
         <tr>
             <td>#</td>
-            <td>Department Name</td>
+            <td th:text="#{department.message.name}"></td>
 
         </tr>
         </thead>
@@ -25,14 +25,14 @@
             <td><span th:text="${department.departmentName}"></span></td>
             <td>
                 <form sec:authorize="isAuthenticated()" th:action="@{'/departments/delete/' + ${department.id}}" th:method="post">
-                    <button type="submit">Delete</button>
+                    <button type="submit" th:text="#{button.delete}"></button>
                 </form>
             </td>
         </tr>
         </tbody>
     </table>
     <form sec:authorize="isAuthenticated()" th:action="@{/departments/addDepartment}" th:method="get">
-        <button type="submit">Add Department</button>
+        <button type="submit" th:text="#{button.add.department}"></button>
     </form>
 
 </main>
