--- a/src/main/resources/templates/include/header.html
+++ b/src/main/resources/templates/include/header.html
@@ -3,26 +3,21 @@
 
 <body>
 
-<div>
-    <nav th:fragment="header">
-        <div style="float: right">
-            <form sec:authorize="!isAuthenticated()" th:action="@{/login}" method="post">
-                <button type="submit">[[#{lang.change.login.signin}]]</button>
-            </form>
-        </div>
-        <div style="float: right">
-            <form sec:authorize="isAuthenticated()" th:action="@{/logout}" method="post">
-                Hello <b>'[[${#httpServletRequest.remoteUser}]]'</b>
-                <button type="submit">[[#{lang.change.login.signout}]]</button>
-            </form>
-        </div>
-        <div class="text-center">
-            <a th:href="@{/}">[[#{menu.message.home}]]</a>
-            <a th:href="@{/products}"> | [[#{menu.message.product}]]</a>
-            <a th:href="@{/drawings}"> | [[#{menu.message.drawing}]]</a>
-            <a sec:authorize="isAuthenticated()" th:href="@{/employees}"> | [[#{menu.message.employee}]]</a>
-            <a sec:authorize="hasRole('ADMIN')" th:href="@{/departments}"> | [[#{menu.message.department}]]</a>
-            <a sec:authorize="hasRole('ADMIN')" th:href="@{/positions}"> | [[#{menu.message.position}]]</a>
+<div class="container" th:fragment="header">
+    <form class="text-right" sec:authorize="!isAuthenticated()" th:action="@{/login}" method="post">
+        <button sec:authorize="!isAuthenticated()" th:action="@{/login}" type="submit" th:text="#{button.signin}"></button>
+    </form>
+    <form class="text-right" sec:authorize="isAuthenticated()" th:action="@{/logout}" method="post">
+        Hello, <b sec:authentication="name"></b>
+        <button type="submit" th:text="#{button.signout}"></button>
+    </form>
+    <nav>
+        <div>
+            <a th:href="@{/}" th:text="#{menu.message.home}"></a>
+            <a th:href="@{/products}" th:text="' | ' + #{menu.message.product}"></a>
+            <a sec:authorize="isAuthenticated()" th:href="@{/employees}" th:text="' | ' + #{menu.message.employee}"></a>
+            <a sec:authorize="hasRole('ADMIN')" th:href="@{/departments}" th:text="' | ' + #{menu.message.department}"></a>
+            <a sec:authorize="hasRole('ADMIN')" th:href="@{/positions}" th:text="' | ' + #{menu.message.position}"></a>
         </div>
     </nav>
 </div>
