--- a/src/main/resources/templates/drawing/addDrawing.html
+++ b/src/main/resources/templates/drawing/addDrawing.html
@@ -1,6 +1,8 @@
 <!DOCTYPE HTML>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="include/head :: head">
+<head>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <title th:text="#{drawing.message.add}"></title>
 </head>
 <body>
@@ -9,10 +11,7 @@
     <h3 th:text="#{drawing.message.add}"></h3>
     <label th:text="#{drawing.message.productName}"></label>
     <br>
-    <select name="product">
-    <option th:each="product : ${products}" th:text="${product.productName}"
-            th:value="${product.id}"></option>
-</select>
+    <input name="product" th:text="${product.productName}" th:value="${product.id}" hidden="hidden">
     </br>
     <label th:text="#{drawing.message.drawingName}"></label>
     <br>
