--- a/src/main/resources/templates/employee/updateEmployee.html
+++ b/src/main/resources/templates/employee/updateEmployee.html
@@ -1,7 +1,10 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
-<head th:replace="include/head :: head">
+<head>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.maskedinput/1.4.1/jquery.maskedinput.min.js"></script>
     <title th:text="#{employee.message.update}"></title>
 </head>
 <body>
@@ -11,19 +14,20 @@
     <h3 th:text="#{employee.message.update}"></h3>
     <label th:text="#{employee.message.firstName}"></label>
     <br>
-    <input type="text" name="firstName" th:value="${employee.firstName}"/>
+    <input type="text" name="firstName" th:value="${employee.firstName}" required/>
     </br>
     <label th:text="#{employee.message.middleName}"></label>
     <br>
-    <input type="text" name="middleName" th:value="${employee.middleName}"/>
+    <input type="text" name="middleName" th:value="${employee.middleName}" required/>
     </br>
     <label th:text="#{employee.message.lastName}"></label>
     <br>
-    <input type="text" name="lastName" th:value="${employee.lastName}"/>
+    <input type="text" name="lastName" th:value="${employee.lastName}" required/>
     </br>
     <label th:text="#{employee.message.phone}"></label>
     <br>
-    <input type="text" name="phoneNumber" th:value="${employee.phoneNumber}"/>
+    <input type="tel" id="phone" name="phoneNumber" th:value="${employee.phoneNumber}"
+           pattern="[\+]\d{3}\s[\(]\d{2}[\)]\s\d{3}[\-]\d{2}[\-]\d{2}" minlength="19" maxlength="19"/>
     </br>
     <label th:text="#{employee.message.userName}"></label>
     <br>
@@ -35,6 +39,11 @@
     <input type="text" name="password"
            placeholder="Password" minlength="5" required/>
     </br>
+    <span sec:authorize="hasAnyRole('USER')">
+        <input name="role" th:value="${employee.getUser().authorities.stream().findFirst().get()}" hidden="hidden">
+        <input name="department" th:value="${employee.department.id}" hidden="hidden">
+        <input name="position" th:value="${employee.position.id}" hidden="hidden">
+  </span>
     <span sec:authorize="hasAnyRole('ADMIN')">
     <br>
     <label th:text="#{employee.message.role}"></label>
@@ -42,25 +51,25 @@
         <option th:each="role : ${roles}" th:text="${role.toString().substring(5)}"
                 th:value="${role}"></option>
     </select>
-    </br>
-    <br>
+        </br>
+        <br>
     <label th:text="#{employee.message.department}"></label>
     <select name="department" oninvalid="InvalidMsgDep(this)" required="required">
         <option th:each="department : ${departments}" th:text="${department.departmentName}"
                 th:value="${department.id}"></option>
     </select>
-    </br>
-    <br>
+        </br>
+        <br>
     <label th:text="#{employee.message.positions}"></label>
     <select name="position" oninvalid="InvalidMsgPos(this)" required="required">
         <option th:each="position : ${positions}" th:text="${position.positionName}"
                 th:value="${position.id}"></option>
     </select>
-    </br>
+        </br>
         </span>
     <tr>
         <td>
-            <button type="submit" value="Submit" th:text="#{button.submit}"></button>
+            <button type="submit" value="Submit" th:text="#{button.submit}" onclick="ValidPhone()"></button>
         </td>
     </tr>
 </form>
@@ -89,6 +98,11 @@
         }
         return true;
     }
+</script>
+<script type="text/javascript">
+    jQuery(function ($) {
+        $("#phone").mask("+375 (99) 999-99-99");
+    });
 </script>
 </body>
 </html>
