--- a/src/main/resources/templates/positionInCompany/updatePosition.html
+++ b/src/main/resources/templates/positionInCompany/updatePosition.html
@@ -3,21 +3,20 @@
 <head>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <title th:text="#{product.message.add}"></title>
+    <title th:text="#{position.message.add}"></title>
 </head>
 <body>
 <div th:replace="include/header :: header"></div>
-<form class="container" action="/products" method="post">
+<form class="container" th:action="@{/positions/update/{id}(id=${position.id})}" th:object="${position}" method="post">
     <br>
-    <h3><span th:text="#{product.message.add}"></span></h3>
+    <h3><span th:text="#{position.message.add}"></span></h3>
 
-    <br><label th:text="#{product.message.add}"></label>
+    <br><label th:text="#{position.message.name}"></label>
     <br>
-    <input type="text" name="productName" th:value="${product.productName}" required/>
+    <input type="text" name="positionName" th:value="${position.positionName}" required/>
     <br>
     <br>
     <button type="submit" th:text="#{button.submit}"></button>
 </form>
 <div th:replace="include/footer :: footer"></div>
 </body>
-</html>
