--- a/src/main/resources/templates/drawing/drawings.html
+++ b/src/main/resources/templates/drawing/drawings.html
@@ -1,7 +1,9 @@
 <!DOCTYPE HTML>
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
-<head th:replace="include/head :: head">
+<head>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <title th:text="#{drawing.message.drawings}"></title>
 </head>
 
@@ -30,17 +32,15 @@
             <td><span th:text="${drawing.getDeveloped().lastName}"></span></td>
             <td><span th:text="${drawing.getApproved().lastName}"></span></td>
             <td>
-                <a th:href="@{/drawings/edit/{id}(id=${drawing.id})}"><button sec:authorize="isAuthenticated()" type="submit" th:text="#{button.update}"></button></a>
+                <a th:if="${product} != null" th:href="@{/drawings/edit/{id}(id=${drawing.id})}"><button sec:authorize="isAuthenticated()" type="submit" th:text="#{button.update}"></button></a>
             </td>
             <td>
-                <a th:href="@{/drawings/delete/{id}(id=${drawing.id})}"><button sec:authorize="isAuthenticated()" type="submit" th:text="#{button.delete}"></button></a>
+                <a th:if="${product} != null" th:href="@{/drawings/delete/{id}(id=${drawing.id})}"><button sec:authorize="isAuthenticated()" type="submit" th:text="#{button.delete}"></button></a>
             </td>
         </tr>
         </tbody>
     </table>
-    <form sec:authorize="isAuthenticated()" th:action="@{/drawings/addDrawing}" th:method="get">
-        <button type="submit" th:text="#{button.add.drawing}"></button>
-    </form>
+        <a th:if="${product} != null" th:href="@{/drawings/addDrawing/{id}(id=${product.id})}"><button sec:authorize="isAuthenticated()" type="submit" th:text="#{button.add.drawing}"></button></a>
 </main>
 <div th:replace="include/footer :: footer"></div>
 
