--- a/src/main/resources/templates/employee/employees.html
+++ b/src/main/resources/templates/employee/employees.html
@@ -1,7 +1,9 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
-<head th:replace="include/head :: head">
+<head>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <title th:text="#{employee.message.employees}"></title>
 </head>
 
@@ -26,7 +28,7 @@
         </thead>
         <tbody>
         <tr th:each="employee, index : ${employees}">
-            <td><span th:text="${index.count}"></span></td>
+            <td><a th:href="@{/employees/{id}(id=${employee.id})}"><span th:text="${index.count}"></span></a></td>
             <td><span th:text="${employee.getFirstName()}"></span></td>
             <td><span th:text="${employee.getMiddleName()}"></span></td>
             <td><span th:text="${employee.getLastName()}"></span></td>
@@ -44,14 +46,14 @@
                 </a>
             </td>
             <td>
-                <a th:href="@{/employees/delete/{id}(id=${employee.id})}">
+                <a th:href="@{/employees/delete/{id}(id=${employee.id})}" th:onClick="return confirm('[[#{error.message.sure}]]')">
                     <button sec:authorize="hasRole('ADMIN')" type="submit" th:text="#{button.delete}"></button>
                 </a>
             </td>
         </tr>
         </tbody>
     </table>
-    <form sec:authorize="isAuthenticated()" th:action="@{/employees/addEmployee}" th:method="get">
+    <form sec:authorize="hasRole('ADMIN')" th:action="@{/employees/addEmployee}" th:method="get">
         <button type="submit" th:text="#{employee.message.add}"></button>
     </form>
 </main>
