--- a/src/main/resources/templates/department/updateDepartment.html
+++ b/src/main/resources/templates/department/updateDepartment.html
@@ -3,7 +3,7 @@
 <head>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <title th:text="#{department.message.add}"></title>
+    <title th:text="#{department.message.update}"></title>
 </head>
 <body>
 <div th:replace="include/header :: header"></div>
