--- a/src/main/resources/templates/include/footer.html
+++ b/src/main/resources/templates/include/footer.html
@@ -3,7 +3,7 @@
 <body>
 
 
-<div th:fragment="footer" class="container">
+<div th:fragment="footer" class="container panel-footer">
     <span class="text-muted">&copy; 2020 Design_Bureau</span>
     <a href="?lang=en">en</a> |
     <a href="?lang=ru">ru</a>
