--- a/src/main/resources/templates/drawing/updateDrawing.html
+++ b/src/main/resources/templates/drawing/updateDrawing.html
@@ -3,36 +3,36 @@
 <head>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <title>Update drawing</title>
+    <title th:text="#{drawing.message.update}"></title>
 </head>
 <body>
 <form class="container" action="#" th:action="@{/drawings/update/{id}(id=${drawing.id})}" th:object="${drawing}" method="post">
-    <h3>Update drawing</h3>
-    <label>Name Product</label>
+    <h3 th:text="#{drawing.message.update}"></h3>
+    <label th:text="#{drawing.message.productName}"></label>
     <br>
         <input name="product" th:text="${drawing.getProduct().productName}" th:value="${drawing.getProduct().id}" hidden="hidden">
     </br>
-    <label>Name Drawing</label>
+    <label th:text="#{drawing.message.drawingName}"></label>
     <br>
-    <input type="text" name="drawingName" th:value="${drawing.drawingName}"/>
+    <input type="text" name="drawingName" th:value="${drawing.drawingName}" required/>
     </br>
-    <label>Checked</label>
+    <label th:text="#{drawing.message.checked}"></label>
     <br>
-    <select name="checked">
+    <select name="checked" oninvalid="InvalidMsgEmp(this)" required="required">
         <option th:each="employee : ${employees}" th:text="${employee.firstName}  + ' ' +  ${employee.lastName}"
                 th:value="${employee.id}" th:required="required"></option>
     </select>
     </br>
-    <label>Developed</label>
+    <label th:text="#{drawing.message.developed}"></label>
     <br>
-    <select name="developed">
+    <select name="developed" oninvalid="InvalidMsgEmp(this)" required="required">
         <option th:each="employee : ${employees}" th:text="${employee.firstName}  + ' ' +   ${employee.lastName}"
                 th:value="${employee.id}"></option>
     </select>
     </br>
-    <label>Approved</label>
+    <label th:text="#{drawing.message.approved}"></label>
     <br>
-    <select name="approved">
+    <select name="approved" oninvalid="InvalidMsgEmp(this)" required="required">
         <option th:each="employee : ${employees}" th:text="${employee.firstName}   + ' ' +  ${employee.lastName}"
                 th:value="${employee.id}"></option>
     </select>
@@ -44,5 +44,17 @@
     </tr>
 </form>
 <div th:replace="include/footer :: footer"></div>
+<script>
+    /**
+     * @return {boolean}
+     */
+    function InvalidMsgEmp(textbox) {
+        if (textbox.value === '') {
+            textbox.setCustomValidity
+            ('[[#{error.message.pos}]]');
+        }
+        return true;
+    }
+</script>
 </body>
 </html>
