--- a/src/main/resources/templates/positionInCompany/positions.html
+++ b/src/main/resources/templates/positionInCompany/positions.html
@@ -5,7 +5,8 @@
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <meta charset="utf-8">
-    <title th:text="#{position.message.positions}"></title>
+    <title th:if="${department != null}" th:text="#{main.message.list.dep} + ${department.departmentName}"></title>
+    <title th:if="${department == null}" th:text="#{position.message.positions}"></title>
 
 </head>
 
@@ -14,7 +15,9 @@
 <div th:replace="include/header :: header"></div>
 
 <main role="main" class="container">
-
+    <br>
+<h6 th:if="${department != null}" th:text="#{main.message.list.dep} + ${department.departmentName}"></h6>
+    <br>
     <table class="table text-center border">
         <thead>
         <tr>
